[package]
name = "limun"
version = "0.0.1"
edition = "2021"
description = "Web-standard JS runtime. Node.js is a guest, not a landlord."

[[bin]]
name = "limun"
path = "src/main.rs"

[dependencies]
v8 = "150.1.0"
# limun.json parsing (import maps)
serde_json = "1"
url = { version = "2.5.8", features = ["expose_internals"] }
ureq = "3.3.0"
data-url = "0.3.2"
base64 = "0.22.1"

# Subresource Integrity (import-map `integrity` field) — SHA-256 hashing of
# fetched module bodies. Only sha256 is supported (spec allows sha384/sha512
# too, but sha256 covers the common case). Also used by WebCrypto
# `crypto.subtle.digest()` for SHA-256/384/512.
sha2 = "0.11"

# WebCrypto `crypto.subtle.digest()` — SHA-1 and SHA-3 family hash functions.
# Pinned to match `sha2`'s `digest` crate version (0.11) to avoid duplicate
# `digest` major versions in the dependency graph.
sha1 = "0.11"
sha3 = "0.12"

# WebCrypto `crypto.getRandomValues()` / `crypto.randomUUID()` —
# cryptographically-secure random byte generation via the OS entropy source.
rand = "0.8"

# WHATWG Encoding Standard legacy label table + decoders (same crate
# Firefox/Servo use). TextDecoder routes all labels through this.
encoding_rs = "0.8"

# Async runtime — multi-thread so HTTP tasks run concurrently while the V8
# isolate stays single-threaded on the main thread. The V8 thread never
# enters the runtime; it only holds a Handle and spawns onto it.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }

# Async HTTP client (replaces ureq for the fetch() global path; ureq stays
# for the static-import module-load path which V8 forces synchronous).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "brotli"] }

# CancellationToken for setTimeout/setInterval cancellation.
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
lto = true
codegen-units = 1
